Сделаны меню в хедере и футере

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-/* Theme Name: Rini-theme */
-
-
 body {
   background-color: rgb(249,250,250);
 }
@@ -20,6 +17,7 @@ header {
 
 .cartridge_img {
   height: 258.98px;
+  /* object-fit: cover; */
 }
 
 .rini_act {
@@ -82,7 +80,7 @@ footer {
   .form-search {
     position: absolute;
     top: 100%; /* Расположить форму под меню */
-    left: 0;
+    left: 0; /* Выравнивание по левому краю */
     width: 100%; 
     display: flex;
     align-items: center;
