--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* Theme Name: Rini-theme */
+
+
 body {
   background-color: rgb(249,250,250);
 }
@@ -17,12 +20,12 @@ header {
 
 .cartridge_img {
   height: 258.98px;
-  /* object-fit: cover; */
 }
 
 .rini_act {
   color:#029ed7;
 }
+
 footer {
   background-color: #f3f3f3!important;
   border-top: 2px solid #d5d5d5;
@@ -80,7 +83,7 @@ footer {
   .form-search {
     position: absolute;
     top: 100%; /* Расположить форму под меню */
-    left: 0; /* Выравнивание по левому краю */
+    left: 0;
     width: 100%; 
     display: flex;
     align-items: center;
