--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ min-height: 200px;
   cursor: pointer;
 }
 
-.cart-wrapper {
+.cart {
   border: 1px solid rgb(110,120,120);
   border-radius: 10px;
   padding: 15px;
