--- a/style.css
+++ b/style.css
@@ -104,8 +104,14 @@ min-height: 200px;
 /* ↓Тест↓ */
 .wpcf7-form-control {
   width: 100%;
-  max-width: 300px; /* Здесь можно установить желаемую максимальную ширину */
+  max-width: 300px;
   margin: 5px 0 0 4px;
+}
+
+.wpcf7-form-control.wpcf7-submit {
+  display: block;
+  margin: 10px auto; /* Выравнивание по центру */
+  text-align: center; /* Выравнивание текста по центру */
 }
 
 /* ↑Тест↑ */
