коммит перед переустановкой

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ min-height: 200px;
   user-select: none;
   cursor: pointer;
 }
-/* ↓Тест↓ */
+
 .wpcf7-form-control {
   width: 100%;
   max-width: 300px;
@@ -112,6 +112,31 @@ min-height: 200px;
   display: block;
   margin: 10px auto; /* Выравнивание по центру */
   text-align: center; /* Выравнивание текста по центру */
+}
+
+/* ↓Тест↓ */
+
+
+.tablepress td {
+  border-left: 1px solid #ddd!important;
+  border-right: 1px solid #ddd!important;
+}
+
+.tablepress tbody {
+  border-bottom: 1px solid #ddd!important;
+}
+
+#tablepress-21_filter {
+  margin-bottom: 10px;
+}
+.paginate_button {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  padding: 3px 7px;
+  border-radius: 5px;
+  font-weight: 600;
+  background-color: #ff6f01;
+  color: #fff!important;
+  text-decoration: none!important;
 }
 
 /* ↑Тест↑ */
