--- a/style.css
+++ b/style.css
@@ -110,8 +110,8 @@ min-height: 200px;
 
 .wpcf7-form-control.wpcf7-submit {
   display: block;
-  margin: 10px auto; /* Выравнивание по центру */
-  text-align: center; /* Выравнивание текста по центру */
+  margin: 10px auto;
+  text-align: center;
 }
 
 /* ↓Тест↓ */
@@ -198,6 +198,30 @@ min-height: 200px;
   height: 15px;
   width: 15px;
   background-color: #000;
+}
+
+.rini_color-square-yellow {
+  display: block;
+  margin: 0 auto;
+  height: 15px;
+  width: 15px;
+  background-color: #FFD700;
+}
+
+.rini_color-square-cyan {
+  display: block;
+  margin: 0 auto;
+  height: 15px;
+  width: 15px;
+  background-color: #00BFFF;
+}
+
+.rini_color-square-magenta {
+  display: block;
+  margin: 0 auto;
+  height: 15px;
+  width: 15px;
+  background-color: #8B008B;
 }
 
 .rini_color-square {
